refactor: 채팅 내역 검색 성능 개선